[workspace]
members = [
    "src/app",
    "src/backend",
    "src/collector",
    "src/common",
    "src/db",
    "src/msg-broker",
    "src/reconciler",
]
resolver = "3"

[workspace.dependencies]
# Local
common = { path = "src/common" }
db = { path = "src/db" }
msg-broker = { path = "src/msg-broker" }

# External
actix-web = "4.10"
anyhow = "1.0"
bincode = { version = "2.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false }
config = "0.15"
dotenv = "0.15"
futures = "0.3"
leptos = { version = "0.7", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
solana-client = "2.2"
solana-commitment-config = "2.2"
solana-signature = "2.2"
solana-transaction-status-client-types = "2.2"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt", "macros"] }
tokio-postgres = "0.7"
uuid = { version = "1.16", features = ["v4", "v5", "v7", "serde"] }
