[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local
common = { workspace = true }
db = { workspace = true }
msg-broker = { workspace = true }
sol-ez = { workspace = true }

# External
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-signature = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
sol-gen = { workspace = true }
