[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local

# External
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, features = [
    "with-serde_json-1",
    "with-uuid-1",
] }
uuid = { workspace = true, features = ["v4", "serde"] }
