[package]
name = "sol-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
# local

# external
anyhow = { workspace = true }
convert_case = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
